[FEAT] CreateMemberEvent 발행 및 테스트